--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,15 @@ server.port= 8080
 server.servlet.contextPath=/ticketing-service
 spring.main.banner-mode=LOG
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/ticketing
+#Local Configuration
+#spring.datasource.url=jdbc:postgresql://localhost:5432/ticketing
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
+
+#Railway App Configuration
+spring.datasource.url=jdbc:postgresql://containers-us-west-113.railway.app:6117/railway
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=U5o6mLR2568doUHq8ruB
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
