--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,14 +3,14 @@ server.servlet.contextPath=/ticketing-service
 spring.main.banner-mode=LOG
 
 #Local Configuration
-#spring.datasource.url=jdbc:postgresql://localhost:5432/ticketing
-#spring.datasource.username=postgres
-#spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/ticketing
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 
 #Railway App Configuration
-spring.datasource.url=jdbc:postgresql://containers-us-west-126.railway.app:7117/railway
-spring.datasource.username=postgres
-spring.datasource.password=u7wrmtzURWvON3jvbnhd
+#spring.datasource.url=jdbc:postgresql://containers-us-west-126.railway.app:7117/railway
+#spring.datasource.username=postgres
+#spring.datasource.password=u7wrmtzURWvON3jvbnhd
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
