--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,5 +15,5 @@ spring.datasource.password=u7wrmtzURWvON3jvbnhd
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.generate-ddl = true
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create
 secret.key = QiFuYXIgUzNydmljZSAkJCMgRmluYWwgUHJvajNjdEAqKg
