--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,7 @@ spring.datasource.url=jdbc:postgresql://containers-us-west-126.railway.app:7117/
 spring.datasource.username=postgres
 spring.datasource.password=u7wrmtzURWvON3jvbnhd
 
+springdoc.swagger-ui.path=/swagger.html
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.generate-ddl = true
