--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,10 +7,15 @@ spring.main.banner-mode=LOG
 #spring.datasource.username=postgres
 #spring.datasource.password=postgres
 
-#Railway App Configuration
-spring.datasource.url=jdbc:postgresql://containers-us-west-113.railway.app:6117/railway
+#Railway App Configuration Production
+#spring.datasource.url=jdbc:postgresql://containers-us-west-113.railway.app:6117/railway
+#spring.datasource.username=postgres
+#spring.datasource.password=q6mfRc1iNmXSIwfEIsTm
+
+#Railway App Configuration Staging
+spring.datasource.url=jdbc:postgresql://containers-us-west-126.railway.app:7117/railway
 spring.datasource.username=postgres
-spring.datasource.password=q6mfRc1iNmXSIwfEIsTm
+spring.datasource.password=WnFkHqk6VKgnseO7mekA
 
 springdoc.swagger-ui.path=/swagger.html
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
