--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,9 @@ spring.main.banner-mode=LOG
 #spring.datasource.password=postgres
 
 #Railway App Configuration Production
-spring.datasource.url=jdbc:postgresql://containers-us-west-113.railway.app:6117/railway
+spring.datasource.url=jdbc:postgresql://containers-us-west-38.railway.app:6016/railway
 spring.datasource.username=postgres
-spring.datasource.password=q6mfRc1iNmXSIwfEIsTm
+spring.datasource.password=DpLmeQuvSLU2eTqdPOUc
 
 #Railway App Configuration Staging
 #spring.datasource.url=jdbc:postgresql://containers-us-west-126.railway.app:7117/railway
