--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,14 +3,14 @@ server.servlet.contextPath=/ticketing-service
 spring.main.banner-mode=LOG
 
 #Local Configuration
-#spring.datasource.url=jdbc:postgresql://localhost:5432/ticketing
-#spring.datasource.username=postgres
-#spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/ticketing
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 
 #Railway App Configuration Production
-spring.datasource.url=jdbc:postgresql://containers-us-west-113.railway.app:6117/railway
-spring.datasource.username=postgres
-spring.datasource.password=q6mfRc1iNmXSIwfEIsTm
+#spring.datasource.url=jdbc:postgresql://containers-us-west-113.railway.app:6117/railway
+#spring.datasource.username=postgres
+#spring.datasource.password=q6mfRc1iNmXSIwfEIsTm
 
 #Railway App Configuration Staging
 #spring.datasource.url=jdbc:postgresql://containers-us-west-126.railway.app:7117/railway
